gcc/testsuite/rust/rustc/ui/suggestions/range-index-instead-of-colon_dg.rs
// { dg-additional-options "-frust-edition=2021" }

fn main() {
    &[1, 2, 3][1:2];
// { dg-error "" "" { target *-*-* } .-1 }
// { help "" "" { target *-*-* } .-2 }
}

